# knightsrook-dawg

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  ruff.toml
backend/app/: config.py  dashboard_stream.py  db.py  events.py  log.py  main.py
backend/app/api/: experiment.py  health.py  store.py  topics.py
backend/app/middleware/: auth.py
backend/app/subsystems/: __init__.py  adaptive_store.py  gradient_experiment.py
dashboard/: index.html  nginx.conf  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: Panel.tsx
dashboard/src/lib/: api.ts  ws.ts
dashboard/src/panels/: EventStream.tsx  ExperimentView.tsx  ManualProbe.tsx  StateInspector.tsx
db/: Dockerfile
db/init/: 01-extensions.sql  02-schema.sql  03-adaptive-store.sql  04-gradient-experiment.sql
docs/architecture/: overview.md
docs/concepts/: README.md
docs/experiments/: 001-gradient-aversion-backprop.md
